<resources>
    <string name="app_name">IMTPMD Stoplicht</string>
    <string name="studentnummer">Studentnummer</string>
    <string name="labelstudentnummer">Vul hier je studentnummer in</string>
    <string name="btn_inloggen">Inloggen</string>

    <!-- Global -->
    <string name="zowie_van_geest_name">Zowie van Geest</string>
    <string name="zowie_van_geest_studentnumber">s1097398</string>
    <string name="zowie_van_geest_website">www.zowievangeest.nl</string>
    <string name="maarten_paauw_name">Maarten Paauw</string>
    <string name="maarten_paauw_studentnumber">s1094220</string>
    <string name="maartenpaauw_website">www.maartenpaauw.com</string>

    <!-- Credits -->
    <string name="credits_about">Met deze applicatie kunnen gebruikers een bijeenkomst evalueren door middel van de stoplicht methode. De gebruiker kan inloggen met zijn of haar studentnummer. Na het inloggen is een overzicht te zien met alle bijeenkomsten. De gebruiker kan ook een bijeenkomst aanmaken. Ook kan de gebruiker een beoordeling achterlaten bij een bijeenkomst. Alle resultaten zijn ook in te zien.</string>
    <string name="credits_copyright">&#169; 2017 Picobello B.V.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">IMTPMD - Stoplicht</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="menu_item_1">Bijeenkomsten</string>
    <string name="menu_item_2">Resultaten</string>
    <string name="menu_item_3">Over deze applicatie</string>
    <string name="menu_item_4">Uitloggen</string>
    <string name="menu_header_text">IMTPMD</string>
    <string name="review_annuleren">Annuleren</string>
    <string name="review_versturen">Versturen</string>
    <string name="review_eventuele_opmerking">Eventuele opmerking</string>
    <string name="review_geef_je_mening">Geef je mening</string>
    <string name="datum">Datum</string>
    <string name="tijd">Tijd</string>
    <string name="tot">Tot</string>
    <string name="create_new_omschrijving">Omschrijving</string>
    <string name="create_new_vak">Vak</string>
</resources>
