<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
           android:id="@+id/nav_group_1">
        <item
            android:id="@+id/nav_meetings_fragment"
            android:icon="@drawable/ic_one"
            android:title="@string/menu_item_1" />
        <item
            android:id="@+id/nav_results_fragment"
            android:icon="@drawable/ic_two"
            android:title="@string/menu_item_2" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/nav_group_2">
        <item
            android:id="@+id/nav_credits_fragment"
            android:icon="@drawable/ic_three"
            android:title="@string/menu_item_3" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/nav_group_3">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_three"
            android:title="@string/menu_item_4" />
    </group>
</menu>