<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="imtpmd.imtpmd_stoplicht.CreditsActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_height="0dp"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_width="0dp"
        android:layout_marginBottom="15dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="4sp"
            android:text="@string/credits_about"
            android:textColor="@android:color/black" />

        <Space
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zowie_van_geest_name"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zowie_van_geest_studentnumber"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/zowie_van_geest_website" />


        <Space
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maarten_paauw_name"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maarten_paauw_studentnumber"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maartenpaauw_website"
            android:autoLink="web"
            android:textColor="@color/colorPrimary" />

        <Space
            android:layout_width="match_parent"
            android:layout_margin="15dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credits_copyright" />
    </LinearLayout
>
</android.support.constraint.ConstraintLayout>
