<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="imtpmd.imtpmd_stoplicht.AddMeetingFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="551dp"
            android:orientation="vertical"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="34dp"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/create_new_studentnumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/create_new_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/create_new_vak"
                android:inputType="textPersonName"
                android:textAppearance="@android:style/TextAppearance.Material.Large.Inverse" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/create_new_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/create_new_omschrijving"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Van"
                android:textColor="@color/colorPrimary" />

            <LinearLayout
                android:id="@+id/layout_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/from_date"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="date"
                    android:focusable="false"
                    android:hint="@string/datum"/>

                <EditText
                    android:id="@+id/from_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="time"
                    android:focusable="false"
                    android:hint="@string/tijd"/>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/To"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tot"
                android:textColor="@color/colorPrimary" />

            <LinearLayout
                android:id="@+id/layout_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/to_date"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="date"
                    android:focusable="false"
                    android:hint="@string/datum"/>

                <EditText
                    android:id="@+id/to_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="time"
                    android:focusable="false"
                    android:hint="@string/tijd"/>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/button_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/review_annuleren"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/review_annuleren" />

                <Button
                    android:id="@+id/review_versturen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/review_versturen" />
            </LinearLayout>

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</FrameLayout>
